--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,20 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <script language="JavaScript">
-        function init() {
-            var can = document.getElementById("can");
-            var ctx = can.getContext("2d");
-            ctx.fillStyle = "#CCC";
-            ctx.fillRect(50, 50, 100, 60);
-        }
-
-    </script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>SAP</title>
+	<script src="./3rdparty/string-format.js"></script>
+	<script src="./3rdparty/big.min.js"></script>
+	<script src="./3rdparty/lodash.min.js"></script>
+	<script src="bootstrap/shell.js" id="sap-ushell-bootstrap"></script>
+	<script id="sap-ui-bootstrap" src="https://ui5.sap.com/resources/sap-ui-core.js"></script>
+	<script>
+		sap.ui.getCore().attachInit(function () {
+			sap.ushell.Container.createRenderer().placeAt("content");
+		});
+	</script>
 </head>
-
-<body onload="init()">
-    <canvas id="can" width="400" height="300" style="border: 1px #000 solid; margin: 30px auto;"></canvas>
-    <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-        <rect x="10" y="10" width="60" height="60" fill="red" stroke="blue"/>
-     </svg>
-
-</body>
-
+<body class="sapUiBody" id="content"></body>
 </html>
